Replaces deprecated thread.getId() function
Replaces deprecated thread.getId() function (deprecated as of Java 19+)
with threadId().